fixes wrapping of nav issue

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -93,6 +93,12 @@
 	}
 }
 
+// Fixes nav long name wrapping issue
+.navigation-list--children {
+	white-space: normal;
+	width: auto;
+}
+
 .navigation-list--children,
 .default-page .navigation-list--children {
 	   -moz-box-shadow: 0px 2px 3px 1px rgba(0, 0, 0, 0.16);
